production/grafana-cstor/grafana-cstor-client.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: grafana-cstor-client
  namespace: grafana-cstor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : grafana-cstor-client
    spec:
      containers:
        - name: grafana-cstor-client-container
          image: inyee/grafana-cstor-dashboard:2eca3b
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana-cstor-client
  name: grafana-cstor-client-service
  namespace: grafana-cstor
spec:
  type: NodePort
  ports:
  - name: grafana-cstor-client
    port: 80
    protocol: TCP
  selector:
    app: grafana-cstor-client
