production/grafana-cstor/grafana-cstor-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana-cstor
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 32515
  selector:
    app: grafana
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: grafana
    type: workload
  name: grafana
  namespace: grafana-cstor
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: grafana
        type: workload
    spec:
      securityContext:
        fsGroup: 107    
      containers:
      - image: grafana/grafana:5.2.0
        name: grafana
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: config-volume
            mountPath: /etc/grafana
          - name: grafana-store
            mountPath: /var/lib/grafana
      volumes:
        - name: grafana-store
          persistentVolumeClaim:
            claimName: grafana-claim      
        - name: config-volume
          configMap:
            name: grafana-cfgmap
