production/grafana-cstor/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: grafana-cstor-ingress
 namespace: grafana-cstor
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
  kubernetes.io/tls-acme: "true"
  kubernetes.io/ingress.class: "nginx"
spec:
 tls:
 - hosts:
   - grafana-dashboard.openebs.ci
   secretName: grafana-ingress
 rules:
 - host: grafana-dashboard.openebs.ci
   http:
     paths:
     - path: /
       backend:
         serviceName: grafana-service
         servicePort: 3000
